[gd_scene load_steps=8 format=3 uid="uid://cdux4cdpm6lsv"]

[ext_resource type="Script" uid="uid://tvsls0wro7dg" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://ct58rm6xls7qj" path="res://player/player.gd" id="2_1bvp3"]
[ext_resource type="PackedScene" uid="uid://ds8tru5wyn10e" path="res://player/Controller.tscn" id="3_1bvp3"]
[ext_resource type="Script" uid="uid://iidbrq2srlum" path="res://player/left_controller.gd" id="4_lquwl"]
[ext_resource type="Script" uid="uid://bf1csw44i0os2" path="res://player/right_controller.gd" id="5_7mycd"]
[ext_resource type="PackedScene" uid="uid://clff6djt8tq14" path="res://menu/menu.tscn" id="5_lquwl"]

[sub_resource type="Environment" id="Environment_ig7tw"]
ambient_light_color = Color(0.696758, 0.874268, 0.973674, 1)

[node name="Main" type="Node3D"]
script = ExtResource("1_ig7tw")

[node name="Origin" type="XROrigin3D" parent="." node_paths=PackedStringArray("geometry_parent")]
script = ExtResource("2_1bvp3")
geometry_parent = NodePath("../GeometryParent")

[node name="Camera" type="XRCamera3D" parent="Origin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)

[node name="LeftHand" parent="Origin" instance=ExtResource("3_1bvp3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1, -0.5)
tracker = &"left_hand"
script = ExtResource("4_lquwl")

[node name="RightHand" parent="Origin" instance=ExtResource("3_1bvp3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1, -0.5)
tracker = &"right_hand"
script = ExtResource("5_7mycd")

[node name="Menu" parent="Origin" node_paths=PackedStringArray("Camera") instance=ExtResource("5_lquwl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)
visible = false
Camera = NodePath("../Camera")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ig7tw")

[node name="GeometryParent" type="Node3D" parent="."]

[connection signal="geometry_created" from="Origin/LeftHand" to="Origin" method="add_geometry_child"]
[connection signal="menu_down" from="Origin/LeftHand" to="Origin/Menu" method="handle_down"]
[connection signal="menu_left" from="Origin/LeftHand" to="Origin/Menu" method="handle_left"]
[connection signal="menu_right" from="Origin/LeftHand" to="Origin/Menu" method="handle_right"]
[connection signal="menu_toggle_open" from="Origin/LeftHand" to="Origin/Menu" method="toggle_open"]
[connection signal="menu_up" from="Origin/LeftHand" to="Origin/Menu" method="handle_up"]
[connection signal="geometry_created" from="Origin/RightHand" to="Origin" method="add_geometry_child"]
[connection signal="menu_select" from="Origin/RightHand" to="Origin/Menu" method="handle_select"]
[connection signal="furniture_selected" from="Origin/Menu" to="Origin/RightHand" method="handle_select_furniture"]
